feat: add production deploy setup and make JWT/CORS config env-driven