@@ -3,8 +3,10 @@ package com.consi.fitme.config;
 import com.consi.fitme.config.security.ApiAccessDeniedHandler;
 import com.consi.fitme.config.security.ApiAuthenticationEntryPoint;
 import com.consi.fitme.service.JwtService;
+import java.util.Arrays;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationProvider;
@@ -34,6 +36,9 @@ public class SecurityConfig {
   private final UserDetailsService userDetailsService;
   private final ApiAuthenticationEntryPoint apiAuthenticationEntryPoint;
   private final ApiAccessDeniedHandler apiAccessDeniedHandler;
+
+  @Value("${security.cors.allowed-origins:http://localhost:5173}")
+  private String allowedOrigins;
 
   @Bean
   public SecurityFilterChain securityFilterChain(HttpSecurity http) {
@@ -80,7 +85,7 @@ public class SecurityConfig {
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+    configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
     configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
     configuration.setAllowedHeaders(List.of("*"));
     configuration.setAllowCredentials(true);
